# QUIDS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  buildWin.cmd  buildWin.sh  compile.sh  devfile.yaml
benchmarks/: BlockchainBenchmarks.cpp  CMakeLists.txt
cmake/: FetchEigen.cmake  FindBLAKE3.cmake  FindGMP.cmake  FindMiniupnpc.cmake  FindNATPMP.cmake  FindRocksDB.cmake  FindZSTD.cmake  README.md  TestUtils.cmake  common_settings.cmake  compiler_settings.cmake  config.h.in  cpu_features.cmake  dependencies.cmake  feature_checks.cmake  git_version.cmake  install_rules.cmake  libpaths.cmake  macos_settings.cmake  options.cmake  project_settings.cmake  quids-config.cmake.in  test_macros.cmake  testing.cmake  ubuntu_settings.cmake  utils.cmake  version.cmake  windows_settings.cmake
cmake/modules/: FindBlake3.cmake  FindGMP.cmake  FindMiniupnpc.cmake  FindNATPMP.cmake  FindRocksDB.cmake  FindZSTD.cmake
docs/: ARCHITECTURE.md  QDHT.md  TODO.md  seed_funding.md
include/: StdNamespace.hpp  version.hpp.in
include/blockchain/: AIBlock.hpp  Block.hpp  BlockProducer.hpp  Chain.hpp  StandardTransaction.hpp  Transaction.hpp  Types.hpp
include/consensus/: OptimizedPOBPC.hpp  QuantumConsensus.hpp
include/core/: BlockProducer.hpp
include/crypto/: QuantumHashFunction.hpp  QuantumInterface.hpp  falcon_signature.hpp
include/crypto/auth/: SecureValidatorAuth.hpp
include/crypto/blake3/: Blake3Hash.hpp
include/crypto/hybrid/: HybridKeyEncapsulation.hpp  QuantumResistantHash.hpp
include/crypto/kyber/: BotanKyber.hpp
include/crypto/signature/: Dilithium.hpp  Falcon.hpp  Sphincs.hpp
include/evm/: SolidityParser.hpp
include/memory/: MemoryPool.hpp
include/network/: NATPMP.hpp  P2PConnection.hpp  P2PNode.hpp  QDHT.hpp  QDHTConstants.hpp  QDHTImplementation.cpp  STUNClient.hpp  UPnPClient.hpp
include/neural/: BaseQuantumNetwork.hpp  QuantumOptimizer.hpp  QuantumPolicyNetwork.hpp  QuantumPolicyNetworkImpl.hpp  QuantumValueNetwork.hpp
include/quantum/: QKD.hpp  QKDSystem.hpp  QuantumCircuit.hpp  QuantumCircuitConfig.hpp  QuantumConsensus.hpp  QuantumCrypto.hpp  QuantumDetail.hpp  QuantumForward.hpp  QuantumGates.hpp  QuantumOperations.hpp  QuantumParameters.hpp  QuantumProof.hpp  QuantumState.hpp  QuantumTypes.hpp  QuantumUtils.hpp
include/rl/: QuantumRLAgent.hpp
include/state/: LockFreeStateManager.hpp
scripts/: deploy_pobpc_testnet.sh  deploy_testnet.sh
src/: CMakeLists.txt
src/blockchain/: AIBlock.cpp  AddressManager.cpp  Block.cpp  BlockProducer.cpp  CMakeLists.txt  StandardTransaction.cpp  Transaction.cpp
src/consensus/: QuantumConsensus.cpp
src/core/: BlockProducer.cpp
src/crypto/: CMakeLists.txt  QuantumHashFunction.cpp  QuantumInterface.cpp
src/crypto/auth/: SecureValidatorAuth.cpp
src/crypto/blake3/: Blake3Hash.cpp
src/crypto/hybrid/: HybridKeyEncapsulation.cpp  QuantumResistantHash.cpp
src/crypto/kyber/: BotanKyber.cpp
src/crypto/signature/: Dilithium.cpp  Sphincs.cpp
src/evm/: CMakeLists.txt  SolidityParser.cpp
src/network/: NATPMP.cpp  P2PConnection.cpp  P2PNetwork.cpp  P2PNode.cpp  QDHT.cpp  STUNClient.cpp  UPnPClient.cpp
src/neural/: BaseQuantumNetwork.cpp  CMakeLists.txt  QuantumPolicyNetwork.cpp  QuantumValueNetwork.cpp
src/quantum/: CMakeLists.txt  QKD.cpp  QuantumCircuit.cpp  QuantumConsensus.cpp  QuantumCrypto.cpp  QuantumGates.cpp  QuantumOperations.cpp  QuantumState.cpp  QuantumUtils.cpp
src/rl/: QuantumRLAgent.cpp
src/rollup/: CMakeLists.txt  EmergencyExit.cpp
src/storage/: CMakeLists.txt
src/zkp/: CMakeLists.txt
tests/: BlockchainTests.cpp  CMakeLists.txt  CTestTestfile.cmake  CryptoTests.cpp  Makefile  cmake_install.cmake
tests/crypto/: SecureValidatorAuthTest.cpp  SphincsTest.cpp
tests/network/: P2PConnectionTests.cpp
tests/quantum/: QuantumConsensusTest.cpp
vendors/botan/: build.h
vendors/sha3/wrapper/python/: test_sha3.py
